[package]
name = "r-liv"
authors = ["3top1a"]
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.17", features = ["fs", "rt"] }
image = "0.24"
vulkano = "0.29"
winit = "0.26"
bytemuck = { version = "1.9", features = ["derive", "extern_crate_std", "min_const_generics"] }
vulkano-win = "0.29"
vulkano-shaders = "0.29"
egui_winit_vulkano = "0.17"
egui = "0.17"
